# agentell

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agentell/: __init__.py
agentell/agent/: __init__.py  agent.py  agent_msg.py  agent_task.py  async_agent.py  threaded_agent.py
agentell/memory/: __init__.py
agentell/tools/: __init__.py
agentell/utils/: __init__.py  repl.py
examples/calculator_agent/: calculation_tool.py  calculator_agent.py  test.prompt
