[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentell"
version = "0.1.0"
description = "An agent-based intelligent system framework"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "agent", "llm", "tools", "automation"]

[tool.setuptools]
packages = ["agentell"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
